<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/dim_espacamento_40dp">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_espacamento_20dp"
        android:text="@string/cinelist"
        android:textSize="@dimen/dim_45sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:shadowRadius="1"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowColor="@color/gray_600"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_loginEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:hint="@string/e_mail"
        app:endIconMode="clear_text"
        android:textColorHint="@color/gray_600"
        android:backgroundTint="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_loginPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/gray_600"
        android:backgroundTint="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        />

    <TextView
        android:id="@+id/txt_esqueceuSenha"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dim_espacamento_10dp"
        android:textColor="@color/purple_400"
        android:text="@string/esqueceu_sua_senha"
        android:textSize="14sp"
        android:textAlignment="viewEnd"/>

    <Button
        android:id="@+id/btn_signUpLogin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dim_espacamento_50dp"
        android:textColor="@color/purple_400"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textAllCaps="true"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:layout_gravity="center"
        android:paddingVertical="5dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_espacamento_10dp"
            android:layout_gravity="center"
            android:text="@string/google_sign_up"
            />


    </LinearLayout>


</LinearLayout >