<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/dim_espacamento_40dp">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cinelist"
        android:textSize="@dimen/dim_45sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:shadowRadius="1"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowColor="@color/gray_600"
        />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/edt_singupNomeLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dim_espacamento_40dp"-->
<!--        android:hint="@string/nome"-->
<!--        app:endIconMode="clear_text"-->
<!--        android:textColorHint="@color/gray_600"-->
<!--        android:backgroundTint="@color/gray_600"-->
<!--        app:hintTextColor="@color/gray_600"-->
<!--        app:boxStrokeColor="@color/white">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edt_singupNomeInput"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_singupEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_espacamento_70dp"
        android:hint="@string/e_mail"
        app:endIconMode="clear_text"
        android:textColorHint="@color/gray_600"
        android:backgroundTint="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_singupEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_singupPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/gray_600"
        android:backgroundTint="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_singupPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_singupPasswordConfirmacaoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:hint="@string/confirme_o_password"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/gray_600"
        android:backgroundTint="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_singupPasswordConfirmacaoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/dim_espacamento_40dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        style="@style/AppTheme.RoundedCornerMaterialButton" />


</LinearLayout >