<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray_900"
    tools:context=".filmedetalhes.MovieDetailsActivity"
    >

    <ImageView
        android:id="@+id/img_movieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@drawable/img_movie"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/txt_nameMovieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:text="@string/perdido_em_marte" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_playlist_add_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_star_rate_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/txt_rateMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:paddingTop="2dp"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                tools:text="@string/_8_0_10_0" />

            <TextView
                android:id="@+id/txt_yearMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="@string/_2015" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="3dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/txt_genreMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingTop="2dp"
                android:textSize="20sp"
                tools:text="Ficção científica" />

            <TextView
                android:id="@+id/txt_timeMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="@string/_2h_31min" />
        </LinearLayout>

    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabMovieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/white"
            android:background="@color/gray_900"
            />

    </androidx.viewpager.widget.ViewPager>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/elenco"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyVwCast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>



</LinearLayout >

</ScrollView>