<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_md_padding"
    tools:context=".search.view.SearchFragment">

    <SearchView
        android:id="@+id/searchView_searchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/busca_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView_searchFragment"
        tools:listitem="@layout/item_movie" />

    <LinearLayout
        android:id="@+id/loading_searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notfoundLayout_searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="@dimen/dim_espacamento_150dp"
            android:layout_height="@dimen/dim_espacamento_150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_round_search_24"
            android:contentDescription="@string/image_nada_encontrado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dim_espacamento_15dp"
            android:textSize="@dimen/dim_20_sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/busque_por_um_filme_g_nero_ou_ator"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>