<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.view.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dim_espacamento_40dp">

        <ImageView
            android:id="@+id/img_usuario"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            tools:src="@drawable/ic_round_person_24"
            />

        <TextView
            android:id="@+id/txt_nomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="Exemplo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dim_espacamento_40dp"/>

        <TextView
            android:id="@+id/txt_emailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="Exemplo@exemplo.com"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dim_espacamento_10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_alterarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_espacamento_60dp"
            android:hint="@string/alterar_e_mail"
            app:endIconMode="clear_text"
            android:textColorHint="@color/gray_600"
            android:backgroundTint="@color/gray_600"
            app:hintTextColor="@color/gray_600"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_singupNomeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_alterarPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_espacamento_40dp"
            android:hint="@string/alterar_password"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/gray_600"
            android:backgroundTint="@color/gray_600"
            app:hintTextColor="@color/gray_600"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alterarPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:layout_marginTop="@dimen/dim_espacamento_40dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/AppTheme.RoundedCornerMaterialButton" />


    </LinearLayout >

</FrameLayout>